upload name app

--- a/math-magicians/package.json
+++ b/math-magicians/package.json
@@ -19,8 +19,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-math-magicians",
+      "react-math-magicians/jest"
     ]
   },
   "browserslist": {
